--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to the Container registry
-        uses: docker/login-action@3
+        uses: docker/login-action@v3.0.0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -26,7 +26,7 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@5
+        uses: docker/metadata-action@v5.5.1
         with:
           images: |
             ghcr.io/${{ github.repository }}
@@ -37,7 +37,7 @@ jobs:
             type=ref,event=tag
 
       - name: Build and push Docker images
-        uses: docker/build-push-action@5
+        uses: docker/build-push-action@v5.1.0
         with:
           context: .
           push: true
